<resources>
    <string name="app_name">DE-Attendance</string>

    <!--  standard strings start  -->
    <string name="blank"> </string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">Next</string>
    <string name="share">Share</string>
    <string name="name">Name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="start_date">Started Date</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="warning">Warning!</string>
    <string name="success">Success!</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="register">Register</string>
    <string name="active">Active</string>
    <string name="finished">Finished</string>
    <string name="search">Search</string>
    <string name="weekend">Weekend</string>
    <string name="class_">Class</string>
    <string name="class_time">Class Time</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="attendance">Attendance</string>
    <string name="attendance_date">Attendance date</string>
    <string name="missed_all_day">Missed all day</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <!--  standard error start  -->
    <string name="error_required_field">Required field.</string>
    <string name="error_invalid_names">Please use only letters (a-z) and space.</string>
    <string name="error_invalid_started_date">Invalid started date. Please, confirm the typed information</string>
    <string name="error_invalid_date_greater_than">The date cannot be greater than 9 months</string>
    <string name="error_invalid_date_greater_than_today">The date cannot be greater than today\'s date</string>
    <string name="error_not_class_found">No class not found, please add a new class.</string>

    <!--  menu bottom  -->
    <string name="tab_home">Home</string>
    <string name="tab_classes">Classes</string>
    <string name="tab_students">Students</string>
    <string name="tab_settings">Settings</string>

    <!-- launch  -->
    <string name="launch_update_attendance">Updating the students\' attendance</string>

    <!--  settings  -->
    <string name="setting_add">Add</string>
    <string name="setting_add_student">Add Student</string>
    <string name="setting_new_student">New Student</string>
    <string name="setting_add_class">Add Class</string>
    <string name="setting_new_class">New Class</string>
    <string name="setting_class_saved_message">New class saved!</string>
    <string name="setting_student_saved_message">New student saved!</string>
    <string name="settings_version">Version:</string>

    <!--  classes  -->
    <string name="classe_updated_message">Class Updated!</string>

    <!--  students  -->
    <string name="students_update">Update Student</string>
    <string name="students_update_message">Student Updated!</string>

    <string-array name="gender_array">
        <item>Female</item>
        <item>Male</item>
    </string-array>
</resources>
