<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/students_update"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/bg_blue"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/tv_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewSubTitle"
            android:layout_marginStart="10dp"
            tools:text="Josaman D. Crown"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"/>

        <TextView
            android:id="@+id/tv_started_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewSubTitle"
            android:layout_marginStart="10dp"
            tools:text="20/11/2019" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"/>

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewSubTitle"
            android:layout_marginStart="10dp"
            tools:text="Female"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_"/>

        <Spinner
            android:id="@+id/spinner_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_class_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_time"/>

        <Spinner
            android:id="@+id/spinner_class_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"/>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit_student"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="25dp"
        android:text="@string/update"
        android:textColor="@color/black"
        android:theme="@style/Button.Submit"
        app:cornerRadius="5dp"
        app:backgroundTint="@color/lime_green"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete_student"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:theme="@style/Button.Submit"
        app:icon="@drawable/ic_delete"
        app:iconTint="@color/black"
        app:cornerRadius="5dp"
        app:backgroundTint="@color/red"/>

</LinearLayout>