<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/navigation_classes"
    app:startDestination="@id/classes_fragment">

    <fragment android:id="@+id/classes_fragment"
        android:name="com.direct.attendance.ui.classes.ClassesFragment"
        android:label="@string/tab_classes"
        tools:layout="@layout/fragment_classes">

        <action android:id="@+id/toStudents"
            app:destination="@id/students_fragment"/>

    </fragment>

    <fragment android:id="@+id/students_fragment"
        android:name="com.direct.attendance.ui.students.StudentsFragment"
        android:label="@string/tab_students"
        tools:layout="@layout/fragment_students">

        <argument android:name="classId"
            app:argType="integer"/>

        <action android:id="@+id/toAttendance"
            app:destination="@id/attendance_fragment"/>

    </fragment>

    <fragment android:id="@+id/attendance_fragment"
        android:name="com.direct.attendance.ui.attendance.AttendanceFragment"
        android:label="@string/attendance"
        tools:layout="@layout/fragment_attendance">

        <argument
            android:name="user"
            app:argType="com.direct.attendance.model.User"/>

    </fragment>


</navigation>