<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_attendance_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/shades_nero"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="20/09/2019" />

    <TextView
        android:id="@+id/tv_weekend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/weekend"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_attendance_date"
        app:layout_constraintStart_toEndOf="@id/tv_attendance_date"
        app:layout_constraintTop_toTopOf="@id/tv_attendance_date" />

    <TextView
        android:id="@+id/tv_disable_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/missed_all_day"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/switch_attendance"
        app:layout_constraintEnd_toStartOf="@id/switch_attendance"
        app:layout_constraintTop_toTopOf="@id/switch_attendance" />

    <Switch
        android:id="@+id/switch_attendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_attendance_date"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/cb_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:checked="true"
        android:gravity="center_vertical"
        android:textAlignment="gravity"
        android:buttonTint="@color/checkbox_tint_color"
        app:layout_constraintEnd_toStartOf="@id/cb_second"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_attendance_date"
        tools:text="09:30" />

    <CheckBox
        android:id="@+id/cb_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:gravity="center_vertical"
        android:textAlignment="gravity"
        android:buttonTint="@color/checkbox_tint_color"
        app:layout_constraintEnd_toStartOf="@id/cb_third"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/cb_first"
        app:layout_constraintTop_toTopOf="@id/cb_first"
        tools:text="10:30" />

    <CheckBox
        android:id="@+id/cb_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:gravity="center_vertical"
        android:textAlignment="gravity"
        android:buttonTint="@color/checkbox_tint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/cb_second"
        app:layout_constraintTop_toTopOf="@id/cb_second"
        tools:text="12:45" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:chipSpacingHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_third"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_morning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/morning"
            android:theme="@style/Widget.MaterialComponents.Chip.Choice"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_afternoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/afternoon"
            android:theme="@style/Widget.MaterialComponents.Chip.Choice"/>

    </com.google.android.material.chip.ChipGroup>

    <View
        android:id="@+id/separator_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group" />


</androidx.constraintlayout.widget.ConstraintLayout>